# gentoo-cache-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pypi.yml
scripts/: ruff
src/gcm/: __init__.py  cli.py  utils.py
src/gcm/commands/: __init__.py  base.py  disable.py  enable.py  stats.py  validators.py
tests/: test_cli.py  test_utils.py
tests/commands/: test_base.py  test_enable.py  test_stats.py
