[project]
name = "gentoo-cache-manager"
dynamic = ["version"]
description = "Helps tweaking build cache settings for individual packages"
authors = [
    {name = "Aliaksei Urbanski", email = "aliaksei.urbanski@gmail.com"},
]
classifiers = [
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux :: Gentoo Linux",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click",
    "portage",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
gcm = "gcm.cli:cli"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
version = { source = "file", path = "src/gcm/__init__.py" }
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "mypy",
    "ruff",
]
[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[[tool.mypy.overrides]]
module = [
    "portage",
    "portage.dbapi.dep_expand",
    "portage.exception",
]
ignore_missing_imports = true
