[project]
name = "gentoo-cache-manager"
dynamic = ["version"]
description = "ðŸ—ƒï¸ Helps tweaking build cache settings for individual packages"
authors = [
    {name = "Aliaksei Urbanski", email = "aliaksei.urbanski@gmail.com"},
]
maintainers = [
    {name = "Aliaksei Urbanski", email = "aliaksei.urbanski@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    # "Intended Audience :: Gentoo Linux Users",
    "Intended Audience :: System Administrators",
    # "Operating System :: POSIX :: Linux :: Gentoo Linux",
    "Topic :: Software Development",
    # "Topic :: System :: Caching",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click",
    "portage",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["gentoo", "cache", "manager", "ccache"]

[project.urls]
Repository = "https://github.com/Jamim/gentoo-cache-manager"
Issues = "https://github.com/Jamim/gentoo-cache-manager/issues"

[project.scripts]
gcm = "gcm.cli:cli"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
version = {source = "file", path = "src/gcm/__init__.py"}
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "mypy",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-env",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-local-folder = ["gcm"]

[tool.mypy]
files = "src/**/*.py"
strict = true

    [[tool.mypy.overrides]]
    module = [
        "portage",
        "portage.dbapi.dep_expand",
        "portage.exception",
    ]
    ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov gcm"

[tool.pytest_env]
PORTAGE_CONFIGROOT = "tests/data"

[tool.coverage.run]
branch = true
